k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    environment: dev
    pod-security.kubernetes.io/enforce: restricted
